--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -71,5 +71,7 @@ $extra-large-value:             80em; // 1280px
 $image-pattern-01:              url('https://2017.europe.wordcamp.org/files/2017/01/background-pattern-01.png');
 $image-realistic-ticket:        url('https://2018.europe.wordcamp.org/files/2017/11/futuristic-ticket.png');
 $image-divider:                 url('https://2018.europe.wordcamp.org/files/2017/12/divider.png');
+$image-stripe-horizontal:       url('https://2018.europe.wordcamp.org/files/2018/03/wceu-stripes-horizontal.png');
+$image-stripe-vertical:         url('https://2018.europe.wordcamp.org/files/2018/03/wceu-stripes-vertical.png');
 // $image-bullet-color:            url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-color.png');
 // $image-bullet-dark:             url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-dark.png');
