--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -106,6 +106,7 @@
 @import "components.nav-pagination";
 @import "components.oembed";
 @import "components.schedule";
+@import "components.session";
 @import "components.sessions";
 @import "components.speakers";
 @import "components.speaker";
