--- a/source/assets/stylesheets/_settings.other.scss
+++ b/source/assets/stylesheets/_settings.other.scss
@@ -73,5 +73,6 @@ $image-realistic-ticket:        url('https://2018.europe.wordcamp.org/files/2017
 $image-divider:                 url('https://2018.europe.wordcamp.org/files/2017/12/divider.png');
 $image-stripe-horizontal:       url('https://2018.europe.wordcamp.org/files/2018/03/wceu-stripes-horizontal.png');
 $image-stripe-vertical:         url('https://2018.europe.wordcamp.org/files/2018/03/wceu-stripes-vertical.png');
+$image-icons:                   url('https://2018.europe.wordcamp.org/files/2018/03/icons.png');
 // $image-bullet-color:            url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-color.png');
 // $image-bullet-dark:             url('https://2017.europe.wordcamp.org/files/2017/01/decoration-bullet-dark.png');
