Media partners layout added

--- a/source/assets/stylesheets/_components.sponsors.scss
+++ b/source/assets/stylesheets/_components.sponsors.scss
@@ -156,7 +156,8 @@
 // Medium
 .wcorg-sponsor-level-speakers-dinner,
 .wcorg-sponsor-level-author,
-.wcorg-sponsor-level-editor {
+.wcorg-sponsor-level-editor,
+.wcorg-sponsor-level-media-partners {
 
   @include clearfix();
 
