--- a/source/assets/stylesheets/_components.navigation.scss
+++ b/source/assets/stylesheets/_components.navigation.scss
@@ -416,8 +416,8 @@
 
     a {
 
-      padding-left: $unit-l;
-      padding-right: $unit-l;
+      padding-left: $unit-m;
+      padding-right: $unit-m;
 
     }
 
