--- a/source/assets/stylesheets/_components.page-day-of.scss
+++ b/source/assets/stylesheets/_components.page-day-of.scss
@@ -26,6 +26,7 @@
 
       position: absolute;
       top: 0;
+      left: 0;
       right: 0;
       height: rem(24);
       transform: translateY(-50%);
