--- a/source/assets/stylesheets/_components.page-day-of.scss
+++ b/source/assets/stylesheets/_components.page-day-of.scss
@@ -32,6 +32,7 @@
       transform: translateY(-50%);
 
       background: $image-divider repeat-x 50% 50%;
+      background-color: transparent!important;
 
       content: "";
 
