--- a/source/assets/stylesheets/_components.images.scss
+++ b/source/assets/stylesheets/_components.images.scss
@@ -94,11 +94,8 @@
   margin-top: $unit-l;
   margin-bottom: $unit-l;
 
-  // box-shadow: .25em .25em 0 0 rgba($color-brand-primary, 8),
-  //             -.25em .5em 0 0 rgba($color-brand-secondary, 8),
-  //             0 .75em 0 0 rgba($color-brand-tertiary, .8);
-
-  .entry-content & {
+  .entry-content &,
+  .textwidget & {
 
     @include breakpoint(extra-large) {
 
