--- a/source/assets/stylesheets/_components.schedule.scss
+++ b/source/assets/stylesheets/_components.schedule.scss
@@ -259,7 +259,8 @@
 
   }
 
-  .wcpt-session-type-custom.wcb-session-registration-opens .wcpt-session-title:before {
+  .wcpt-session-type-custom.wcb-session-registration-opens .wcpt-session-title:before,
+  .wcpt-session-type-custom.wcb-session-registration-opens-2 .wcpt-session-title:before {
 
     background-position: 0 -24px;
 
